	+ Use curly brackets {} to have formatting appear only if all enclosed
	  tags are available
	+ Ability to run on OLPC's Sugar user environment (Owen)
	+ Added Ukranian translation (Господарисько Тарас)
	+ Bug: No more freezes due to threading! Finally! Seriously!
	+ Bug: Cannot set album art for album/artist with "/" in name
	+ Bug: Prevent interface jumping because of progress bar font

v0.9 - November 19, 2006
	+ Added stream support
	+ Use local artwork (cover.jpg, folder.jpg) first, if it exists
	  (requires music_directory to be specified in preferences)
	+ Allow crossfading (mixing) between songs
	+ Fetch higher-resolution cover art
	+ Allow specifying search terms for remote album art
	+ Improved song info viewer
	+ Make remote images window non-blocking
	+ Popup song notification on un-pause
	+ Pick up tooltip album background color from gtk theme
	+ Store cover art in ~/.covers for consistency with gmpc
	+ Add German translation (Paul Johnson)
	+ Bug: Prevent infrequent crash when fetching album art
	+ Bug: Intermittent interface freezes due to threading
	+ Bug: Unable to delete playlists with ampersand, etc.
	+ Bug: Player can become the wrong height on expand
	+ Bug: Ensure local art is correctly applied on song changes
	+ Bug: Searching library doesn't work for non-english locale

v0.8.1 - October 19, 2006
	+ Add Polish translation (Tomasz Dominikowski)
	+ Bug: Correctly send mpd password when using manual connect
	+ Bug: Prevent certain keys from causing events
	+ Bug: Prevent potential crash if not able to obtain mpd status

v0.8 - October 7, 2006
	+ Allow user formatting of current playlist, library, and title
	+ Pref for song notification location
	+ Allow song notification for users without gnome-python-extras
	+ Pref to hide playback buttons
	+ Pref to update MPD library on start
	+ --info, --status displays current song info or MPD status
	+ Pref to autoconnect on start, connect/disconnect buttons
	+ Fetch album art in background (non-blocking)